// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JsonInput matches snapshot (null) 1`] = `
<div
  class="json-input"
>
  <div
    class="code-editor"
    style="width: 100%; height: 8vh;"
  >
    <div
      class="cm-editor"
    >
      <!-- Code editor, language: hjson, value: "" -->
    </div>
  </div>
</div>
`;

exports[`JsonInput matches snapshot (value) 1`] = `
<div
  class="json-input"
>
  <div
    class="code-editor"
    style="width: 100%; height: 8vh;"
  >
    <div
      class="cm-editor"
    >
      <!-- Code editor, language: hjson, value: "{\\n  \\"hello\\": [\\n    \\"world\\",\\n    {\\n      \\"a\\": 1,\\n      \\"b\\": 2\\n    }\\n  ]\\n}" -->
    </div>
  </div>
</div>
`;
